tests/misc/tinc.nim
discard """
  line: 7
  errormsg: "type mismatch: got (int)"
"""
var x = 0

inc(x+1)
